--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <title>OkiMAP</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider@15.7.0/dist/nouislider.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/nouislider@15.7.0/dist/nouislider.min.js"></script>
 
   <!-- SCSSコンパイル後のCSSを読み込む -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="viewer.js"></script>
-    <div id="viewer"></div>
-    <div id="controls">
+  <div id="viewer">
     <div id="label">Loading...</div>
-    <div id="slider"></div>
-    </div>
-
+  </div>
+  <div id="slider"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/openseadragon.min.js"></script>
+  <!-- noUiSlider（スライダーのCSSとJS） -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nouislider@15.7.0/dist/nouislider.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/nouislider@15.7.0/dist/nouislider.min.js"></script>
+  <script src="viewer.js"></script>
 </body>
 </html>
